# BuildingSoftwareAssignment

./: .gitignore  CODE_OF_CONDUCT.md  README.md  pyproject.toml  test_Analysis.py
assignment_template/: Analysis.py  pyproject.toml  test_Analysis.py  tests.md
assignment_template/configs/: job_file.example.yml  system_config.example.yml  system_config.yml  user_config.example.yml
configs/: job_file.yml
src/configs/: user_config.yml
