[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "building_software_assignment"
authors = [
    {name = "Maria Semeniuk", email = "maria.semeniuk@mail.utoronto.ca"},
]
description = "Building Software Assignment"
version = "0.1.0"
dependencies = ["typing", "pandas", "pyyaml", "requests"]
requires-python = ">=3.11.0"
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
]

[tool.hatch.build.targets.wheel]
      packages = ["BuildingSoftwareAssignment"]

[project.scripts]
Analysis = "mymodule:Analysis"